# ConferenceCorpus

./: .project  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  buildConferenceCorpus.yml  upload-to-pypi.yml  uploadConferenceCorpus-to-pypi.yml
bibtex/: bibparser.py
corpus/: ccupdate.py  config.py  dblpmain.py  event.py  eventcorpus.py  eventrating.py  eventseriescompletion.py  eventtransfer.py  location.py  locationfixer.py  lookup.py  nominatim.py  openresearch.py  trulytabular.py  version.py  webserver.py
corpus/datasources/: acm.py  confref.py  crossref.py  dblp.py  dblpxml.py  download.py  drops.py  gnd.py  (+8 more)
datasources/: confref.py  crossref.py  dblp.py  dblpxml.py  openresearch.py  webscrape.py  wikicfp.py  wikicfpscrape.py  wikidata.py
ptp/: eventrefparser.py  ordinal.py  parsing.py  signature.py
quality/: painscale.py  rating.py
resources/: acronyms.yaml  cc.yaml  cityNamePrefixes.yaml  cityNames.yaml  confref.yaml  countries.yaml  crossref.yaml  dblp.yaml  dictionary.yaml  endpoints.yaml  formats.yaml  gnd.yaml  queries.yaml  regions.yaml  signature.yaml  tibkat.yaml  trulytabular.yaml  wikicfp.yaml  wikidata.yaml  years.yaml
scripts/: blackisort  ccsqliteweb  crawlWikiCFP  doc  eventseries.js  ftx2json  genuml  getesctestdata  getofflinedata  gnd2jena  install  lookup  run  test  tib  unionselect.py  wdcc
smw/: topic.py
tests/: datasourcetoolbox.py  testACM.py  testAcronymCategory.py  testBibParser.py  testCityCategory.py  testCoLocation.py  testConfref.py  testCorpusLookup.py  testCrossRef.py  testDROPS.py  testDblp.py  testDblpEvents.py  testDblpSparql.py  testDblpXml.py  testEvent.py  testEventCorpus.py  testEventSeriesBlueprint.py  testEventSeriesCompletion.py  testEventStorage.py  testFTX.py  testGeoPy.py  testGnd.py  testHistogramm.py  testISBN.py  testLocationFixing.py  testLocationLookup.py  testMatching.py  testMatchingEvaluation.py  testOpenResearch.py  testOpenResearchExport.py  testPainScale.py  testParsing.py  testRating.py  testSMW.py  testScholar.py  testSignature.py  testStatistics.py  testTibkat.py  testTibkatFTX.py  testTrulyTabular.py  (+14 more)
(+91 files in other folders)
